Update for Release 2020-09-11-1000 BEA#211 BEV Features: Toggle Tooltips BEA#212 BEV Features: Interpretation BEA#213 BEV Features: Capture Diagram (to PDF) BEA#214 BEV Features: PNG fit to width toggle BEA#215 BEI Update: for new BEV BEA#216 BEI Update: support discrete analysis BEA#217 BEI Update: support MutBatch analysis BEA#218 MBatchPipeline: update for BEI MutBatch BEA#223 Combined Release with BEI BEA#230 Image Deploy: docker-compose push and pull BEA#231 BEI Deployment Instructions Update BEA#238 BEV/SDB: download links STD#51 SDMW: Search STD#52 SDMW: Improved Error Handling STD#54 SDMW: GRC Assessment STD#55 SDMW: Release STD#63 MBatch HC/NGCHM: Number of Features 2000-5000 for Both STD#65 SDMW: Slow Load/Reload Projects STD#67 SDMW: Add Credit to MW.org STD#71 SMW: mapping metabolite names

--- a/apps/BatchEffectsViewer/web/bev_basic.css
+++ b/apps/BatchEffectsViewer/web/bev_basic.css
@@ -25,7 +25,7 @@
 	--row-B-height: 40vh;	
 }
 
-*{ font-family: Arial,sans-serif;  font-size: 14px;}
+*{ font-family: Arial,sans-serif; }
 *{box-sizing: border-box;}
 
 .body-wrapper
@@ -56,6 +56,11 @@ body.wait, body.wait *
 	max-width:100%;
 	width: auto;
 	height: auto;	
+}
+
+.displayPngImgNoFit
+{
+	max-width: none;
 }
 
 /* ********************************************* */
